fix login dropdown item text align

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -6,3 +6,7 @@
 .newAccount {
   margin-right: 8px;
 }
+
+.network ul{
+  text-align: left;
+}
